# double-pendulum

./: .gitignore  CMakeLists.txt  LICENSE  Pendulum.cpp  Pendulum.h  Pendulums.cpp  Pendulums.h  README.md  config.ini  final.txt  main.cpp
